--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     ],
     "license": "MIT",
     "dependencies": {
+        "buffer": "^6.0.3",
+        "crypto-browserify": "^3.12.0",
         "encoding-japanese": "2.0.0",
         "he": "1.2.0",
         "html-to-text": "9.0.3",
@@ -24,6 +26,9 @@
         "linkify-it": "4.0.1",
         "mailsplit": "5.4.0",
         "nodemailer": "6.8.0",
+        "path-browserify": "^1.0.1",
+        "process": "^0.11.10",
+        "stream-browserify": "^3.0.0",
         "tlds": "1.236.0"
     },
     "devDependencies": {
@@ -36,7 +41,9 @@
         "grunt-contrib-nodeunit": "4.0.0",
         "grunt-eslint": "24.0.1",
         "iconv": "3.0.1",
-        "random-message": "1.1.0"
+        "random-message": "1.1.0",
+        "webpack": "^5.75.0",
+        "webpack-cli": "^5.0.1"
     },
     "repository": {
         "type": "git",
